--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/img/fondo.webp);
+    background-image: url(/img/fondo1.jfif);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
