--- a/sryles/style.css
+++ b/sryles/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/img/fondo1.jfif);
+    background-image: url(/img/fondo.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
