--- a/sryles/style.css
+++ b/sryles/style.css
@@ -41,7 +41,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #242424;
 }
 
 li {
@@ -50,14 +50,14 @@ li {
 
 li a {
   display: block;
-  color: white;
+  color: rgb(255, 255, 255);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 li a:hover {
-  background-color: #111;
+  background-color: rgb(26, 10, 10);
 }
 
 .tamano{
