--- a/sryles/style.css
+++ b/sryles/style.css
@@ -41,7 +41,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #242424;
+  background-color: rgb(8, 7, 7);
 }
 
 li {
@@ -66,6 +66,6 @@ li a:hover {
 }
 
 .tamano_banner{
-  width: 1230px;
-  height: 500px;
+  width: 50%;
+  height: 50%;  
 }
