--- a/sryles/style.css
+++ b/sryles/style.css
@@ -41,7 +41,9 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: rgb(8, 7, 7);
+  background-color: rgb(2, 2, 2);
+  display: block;
+  border-radius: 20px;
 }
 
 li {
@@ -50,7 +52,7 @@ li {
 
 li a {
   display: block;
-  color: rgb(255, 255, 255);
+  color: rgb(248, 246, 246);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -67,5 +69,11 @@ li a:hover {
 
 .tamano_banner{
   width: 50%;
-  height: 50%;  
+  height: 50%; 
+}
+.container{
+  border-radius: 20px;
+  text-align: center;
+  width: 350%;
+  height: 300%; 
 }
