--- a/styles/estilo_perros.css
+++ b/styles/estilo_perros.css
@@ -43,6 +43,8 @@ body{
 
 .baner{
     width:100%;
-    min-width: 300px;
+    min-width: 100px;
     height: 450px;
+    border-radius: 15PX;
+    background-position: center;
 }
